src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__LeadToPatientProcess</fullName>
        <description>Lead to Patient conversion process</description>
        <isActive>true</isActive>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Referral</fullName>
        <isActive>true</isActive>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Account Setup In Progress</fullName>
        </values>
        <values>
            <fullName>Authorized</fullName>
        </values>
        <values>
            <fullName>Compliance In Progress</fullName>
        </values>
        <values>
            <fullName>Compliance Not Met</fullName>
        </values>
        <values>
            <fullName>Data Operations In Progress</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>System Enablement Completed</fullName>
        </values>
        <values>
            <fullName>System Enablement In Progress</fullName>
        </values>
        <values>
            <fullName>Trade In Progress</fullName>
        </values>
        <values>
            <fullName>Unauthorized</fullName>
        </values>
        <values>
            <fullName>Win</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>IRA/SEP/ROTH</fullName>
                </value>
                <value>
                    <fullName>Custodial</fullName>
                </value>
                <value>
                    <fullName>Guardianship</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Trust Structure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Open_Team_submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Open Team submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Person</fullName>
                </value>
                <value>
                    <fullName>Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <inlineHelpText>Source Information is required in case of Transferment</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Transfer Position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_with_anti_money_laundering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance with anti-money laundering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complience_Team_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complience Team Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Lv1_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Lv1 check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_System_Enablement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push account to Account Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignCareCoordinatorContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Coordinator Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>CareCoordinatorContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignCareCoordinatorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Coordinator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CareCoordinatorUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanRecordTypeName__c</fullName>
        <description>Record Type name to use for Care Plan when we convert this lead into a Patient.</description>
        <label>Care Plan Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanRecordTypeNamespace__c</fullName>
        <description>Record Type namespace to use for Care Plan when we convert this lead into a Patient.</description>
        <label>Care Plan Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Diagnosis__c</fullName>
        <description>Comma-delimited list of diagnoses or ICD codes associated with the referral.</description>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceGroupId__c</fullName>
        <description>Group ID of the patient&apos;s insurance.</description>
        <label>Insurance Group ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceMemberId__c</fullName>
        <description>Member ID of the patient&apos;s insurance.</description>
        <label>Insurance Member ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceType__c</fullName>
        <description>Type of primary insurance: Medicare, Medicaid, Commercial or Self-Pay</description>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Self-pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsMarkedForPatientConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Lead should be converted to Patient</description>
        <label>IsMarkedForPatientConversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsOutOfNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the referral is out of network.</description>
        <label>Out Of Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryInsurance__c</fullName>
        <description>Primary health insurance company associated with the patient.</description>
        <label>Primary Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <description>Priority of the referral as designated by the referring provider.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergent</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonForOutOfNetworkReferral__c</fullName>
        <description>Reason the referral is sent out of network.</description>
        <label>Reason for Out of Network Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Preference</fullName>
                </value>
                <value>
                    <fullName>Patient Preference</fullName>
                </value>
                <value>
                    <fullName>Limited Provider Availability</fullName>
                </value>
                <value>
                    <fullName>Service Not Offered</fullName>
                </value>
                <value>
                    <fullName>Insurance Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonforReferral__c</fullName>
        <label>Reason for Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the organization receiving or fulfilling the referral.</description>
        <label>Referred To Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Referred To Organization)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner to whom the patient is being referred.</description>
        <label>Referred To Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referred To Practitioner)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user to whom the referral is sent.</description>
        <label>Referred To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the referring organization.</description>
        <label>Referring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner who submitted the referral.</description>
        <label>Referring Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referring Practitioner)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user who submitted the referral.</description>
        <label>Referring User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the patient or member Account who is being referred.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Related Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>An external identifier for the Candidate Patient.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty__c</fullName>
        <description>Specialty associated with the referral.</description>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Neurosurgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeOfService__c</fullName>
        <description>Type of service requested.</description>
        <label>Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2nd Opinion</fullName>
                </value>
                <value>
                    <fullName>Radiology Services</fullName>
                </value>
                <value>
                    <fullName>Lab Services</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identification_check_to_terrorism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identification check to terrorism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Traverse1_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Traverse1 Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Traverse1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Traverse1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Traverse2_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Traverse2 Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Traverse2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Traverse2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Traverse3_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Traverse3 Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Traverse3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Traverse3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meet_Compliances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meet Compliances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meet_Risks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meet Risks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Dial_Cell_Phone__c</fullName>
        <formula>IF(  MobilePhone &lt;&gt; &quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N600000000wHL&amp;phonenumber=&quot;&amp;  MobilePhone , IMAGE(&quot;https://service.ribbit.com/salesforce/img/callmobial.gif&quot;, &quot;Please \&quot;EJECT\&quot; the RIBBIT Phone from the sidebar prior to using One-Click calling&quot;) ,&quot;callNumber&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dial Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Dial_Phone__c</fullName>
        <formula>IF( Phone   &lt;&gt; &quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N600000000wHL&amp;phonenumber=&quot;&amp;  Phone , IMAGE(&quot;https://service.ribbit.com/salesforce/img/callphone.gif&quot;, &quot;Please \&quot;EJECT\&quot; the RIBBIT Phone from the sidebar prior to using One-Click calling&quot;) ,&quot;callNumber&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dial Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Message_Indicator__c</fullName>
        <label>Message Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__New_Message__c</fullName>
        <formula>IF(contains(Ribbit1__Message_Indicator__c, $User.Id), HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;?playNew=true&quot;,  IMAGE(&quot;https://service.ribbit.com/salesforce/assets/msgPlayIndicator_2.png&quot;, &quot;&quot;) , &quot;_self&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Concentration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concentration Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Operational2__c</fullName>
        <formula>IF(AnnualRevenue  /  NumberOfEmployees    &lt;=   ROUND(10000, 2), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Reputational__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reputational Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign Prospect Pre-Approval Form</fullName>
                </value>
                <value>
                    <fullName>Reverse Solicitation Letter</fullName>
                </value>
                <value>
                    <fullName>PEP Questionnaire</fullName>
                </value>
                <value>
                    <fullName>FPF Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Canadian Client Certificate</fullName>
                </value>
                <value>
                    <fullName>Valid Government Issued Photo ID</fullName>
                </value>
                <value>
                    <fullName>IPO Certification Form</fullName>
                </value>
                <value>
                    <fullName>Privileged Access Form</fullName>
                </value>
                <value>
                    <fullName>Margin Agreement</fullName>
                </value>
                <value>
                    <fullName>TOD Agreement</fullName>
                </value>
                <value>
                    <fullName>Proxy Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SICCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Information__c</fullName>
        <inlineHelpText>Required only for Transfer Positions</inlineHelpText>
        <label>Source Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Team_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Team Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trading_Countries__c</fullName>
        <label>Trading Countries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trading_Currency__c</fullName>
        <label>Trading Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED (UAE Dirham)</fullName>
                </value>
                <value>
                    <fullName>ALL (Albanian Lek)</fullName>
                </value>
                <value>
                    <fullName>AMD (Armenian Dram)</fullName>
                </value>
                <value>
                    <fullName>ANG (Netherlands Antillean Guilder)</fullName>
                </value>
                <value>
                    <fullName>AUD (Australian Dollar)</fullName>
                </value>
                <value>
                    <fullName>AWG (Aruba Guilder)</fullName>
                </value>
                <value>
                    <fullName>AZN (Azerbaijanian Manat)</fullName>
                </value>
                <value>
                    <fullName>BAM (Bosnia and Herzegovina Convertible Marks)</fullName>
                </value>
                <value>
                    <fullName>BBD (Barbados Dollar)</fullName>
                </value>
                <value>
                    <fullName>BDT (Bangladesh Taka)</fullName>
                </value>
                <value>
                    <fullName>BGN (Bulgarian Lev)</fullName>
                </value>
                <value>
                    <fullName>BHD (Bahraini Dinar)</fullName>
                </value>
                <value>
                    <fullName>BIF (Burundi Franc)</fullName>
                </value>
                <value>
                    <fullName>BMD (Bermudian Dollar)</fullName>
                </value>
                <value>
                    <fullName>BND (Brunei Dollar)</fullName>
                </value>
                <value>
                    <fullName>BSD (Bahamian Dollar)</fullName>
                </value>
                <value>
                    <fullName>BTN (Bhutan Ngultrum)</fullName>
                </value>
                <value>
                    <fullName>BWP (Botswana Pula)</fullName>
                </value>
                <value>
                    <fullName>BYR (Belarussian Ruble)</fullName>
                </value>
                <value>
                    <fullName>BZD (Belize Dollar)</fullName>
                </value>
                <value>
                    <fullName>CAD (Canadian Dollar*)</fullName>
                </value>
                <value>
                    <fullName>CDF (Congolese Franc)</fullName>
                </value>
                <value>
                    <fullName>CHF (Swiss Franc)</fullName>
                </value>
                <value>
                    <fullName>CNY (Chinese Yuan)</fullName>
                </value>
                <value>
                    <fullName>CVE (Cape Verde Escudo)</fullName>
                </value>
                <value>
                    <fullName>CZK (Czech Rep Koruna)</fullName>
                </value>
                <value>
                    <fullName>DJF (Djibouti Franc)</fullName>
                </value>
                <value>
                    <fullName>DKK (Danish Krone)</fullName>
                </value>
                <value>
                    <fullName>DOP (Dominican Peso)</fullName>
                </value>
                <value>
                    <fullName>DZD (Algerian Dinar)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Journey__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;New&quot;),IMAGE(&quot;/resource/Account_Journey&quot;, &quot;Account Journey&quot;),
	IF(ISPICKVAL(Status,&quot;In Progress&quot;),IMAGE(&quot;/resource/Account_Journey&quot;, &quot;Account Journey&quot;),
		IF(ISPICKVAL(Status,&quot;Lost&quot;),IMAGE(&quot;/resource/1415947377000/Lost&quot;, &quot;Lost&quot;),
			IF(ISPICKVAL(Status,&quot;Win&quot;),IMAGE(&quot;resource/1415945873000/SalesTeam&quot;, &quot;SalesTeam&quot;),
				IF(ISPICKVAL(Status,&quot;Account Setup In Progress&quot;),IMAGE(&quot;/resource/1415945834000/AccountTeam&quot;, &quot;AccountTeam&quot;),
					IF(ISPICKVAL(Status,&quot;Compliance In Progress&quot;),IMAGE(&quot;/resource/1415945846000/ComplianceTeam&quot;, &quot;ComplianceTeam&quot;),
						IF(ISPICKVAL(Status,&quot;Data Operations In Progress&quot;),IMAGE(&quot;/resource/1415945864000/OperationTeam&quot;, &quot;OperationTeam&quot;),
							IF(ISPICKVAL(Status,&quot;Trade In Progress&quot;),IMAGE(&quot;/resource/1415956278000/TradeInProgress&quot;, &quot;TradeInProgress&quot;),
								IF(ISPICKVAL(Status,&quot;Authorized&quot;),IMAGE(&quot;/resource/1415958230000/Authorized&quot;, &quot;Authorized&quot;),
									IF(ISPICKVAL(Status,&quot;Unauthorized&quot;),IMAGE(&quot;/resource/1415949141000/Rejected&quot;, &quot;Rejected&quot;),
										NULL
									)
								)
							)
						)
					)
				)
			)
		)
	)
)</formula>
        <label>User Journey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>